fix: overflow-x in session 2

--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -1,7 +1,7 @@
 /* controls styles and media query in section 1 */
 
 #sess1 {
-  @apply bg-[url("../img/sess1-bg-mobile.webp")] h-[85vh] w-full bg-cover bg-top bg-no-repeat lg:bg-[url("../img/sess1-bg-desktop.webp")] py-8 px-8;
+  @apply bg-[url("../img/sess1-bg-mobile.webp")] h-[100vh] w-full bg-cover bg-top bg-no-repeat lg:bg-[url("../img/sess1-bg-desktop.webp")] py-8 px-8;
 }
 
 .sess1_wrapper {
@@ -17,11 +17,11 @@
 
 /* controls styles and media query in section 2 */
 #sess2 {
-  @apply container mx-auto pb-[1060px] relative h-full lg:pb-[460px] overflow-x-hidden;
+  @apply container mx-auto py-16 relative h-full lg:pb-[460px];
 }
 
 .sess2__wrapper {
-  @apply py-8 px-8 mx-8 rounded-2xl shadow-xl absolute -top-12 bg-white z-20 lg:left-[10%] lg:max-w-6xl;
+  @apply py-8 px-8 mx-8 rounded-2xl shadow-xl lg:absolute -top-12 bg-white z-20 left-10 lg:max-w-6xl;
 }
 .sess2__wrapper h2 {
   @apply font-sora text-center text-[#203c89] text-2xl mb-8 lg:text-3xl;
