--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -8,3 +8,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+  overflow-x: hidden;
+}
